improved dashboard style when hovering

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logotrans-min.png" />
+    <meta charset="utf-8" /> 
+    <title>En Gramma</title> 
+    <link rel="icon" href="%PUBLIC_URL%/logotrans-min.png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="theme-color" content="#1B191A" /> 
+    <meta name="description" content="EN GRAMMA (‘ène gramma’) est un trio Transe Rock formé en 2021 et basé à Rennes. Issu du grec ancien, son nom évoque la marque que la mémoire laisse en nous à travers le temps." /> 
+    <meta name="keywords" content="En Gramma, transe-rock, français, anglais, grec ancien, afro-dionysiaque, rock acoustique, Beau Brûlis" /> <!-- Les mots-clés pour votre site, autrefois utilisés pour le SEO mais maintenant largement ignorés -->
+    <meta name="author" content="Thomas Kiatikhema" /> <!-- Le nom de l'auteur du site -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logotrans-min.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
