Added google verif meta

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" /> 
+    <meta charset="utf-8" />
+    <meta name="google-site-verification" content="wP7qPyJBrpH5GJTQBBMnOgWq50GzL2BDlGG6x32QGfg" /> 
     <title>En Gramma</title> 
     <link rel="icon" href="%PUBLIC_URL%/logotrans-min.png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
