--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="EN GRAMMA (‘ène gramma’) est un trio Transe Rock formé en 2021 et basé à Rennes. Issu du grec ancien, son nom évoque la marque que la mémoire laisse en nous à travers le temps." /> 
     <meta name="keywords" content="En Gramma, transe-rock, français, anglais, grec ancien, afro-dionysiaque, rock acoustique, Beau Brûlis" /> <!-- Les mots-clés pour votre site, autrefois utilisés pour le SEO mais maintenant largement ignorés -->
     <meta name="author" content="Thomas Kiatikhema" /> <!-- Le nom de l'auteur du site -->
+    <meta property="og:image" content="%PUBLIC_URL%/engramma.png" />
     <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logotrans-min.png" />
     <!--
